# Koochi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  koochi.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/agents/: mod.rs  runner.rs  runner_tests.rs  verdict.rs
src/agents/runner/: evidence.rs  grounding.rs  investigation.rs
src/cli/: debug.rs  mod.rs  render.rs
src/config/: mod.rs
src/llm/: anthropic.rs  bus.rs  fake.rs  managed.rs  mod.rs  openai.rs  tools.rs  types.rs  verdict_parser.rs
src/prompts/: grounding.rs  mod.rs  verdict.rs
src/scope/: mod.rs
src/search/: api.rs  file_kind.rs  local.rs  local_tests.rs  mod.rs  symbols.rs
src/synthesis/: mod.rs
tests/: AGENTS.md  e2e.rs  live_provider.rs
tests/codebases/rust/config_discovery/: KOOCHI.TOML
tests/codebases/rust/config_discovery/src/: config_probe.rs
tests/codebases/rust/config_override/: koochi.toml  override.toml
tests/codebases/rust/config_override/src/: config_probe.rs
tests/codebases/rust/parallel_stress/: .gitignore  koochi.toml
tests/codebases/rust/tool_loop/: koochi.toml
tests/e2e/: clinic_scheduler.rs  creator_market.rs  fake_provider.rs  fulfillment_hub.rs  live_provider_config.rs  parallel_stress.rs  polyglot_workspace.rs  support.rs  tool_loop.rs
tests/e2e/consistency/: mod.rs
tests/live_provider/: clinic_scheduler.rs  creator_market.rs  fulfillment_hub.rs  live_provider_config.rs  parallel_stress.rs  polyglot_workspace.rs  support.rs  tool_loop.rs
tests/live_provider/consistency/: fixture.rs  mod.rs  report.rs
(+103 files in other folders)
