[package]
name = "koochi"
version = "0.1.0"
edition = "2024"
description = "A small, cache-friendly code search API for parallel review agents."
license = "MIT"

[features]
integration-tests = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["integration-tests"]
